--- a/assests/CSS/style.css
+++ b/assests/CSS/style.css
@@ -160,12 +160,39 @@ img:hover {
 
 /* media queries */
 @media  screen and (max-width:980px) {
-    header {
-        padding-bottom: 0;
+    .header {
+        padding-bottom: 20;
         justify-content: center;
         position: relative;
     }
+
+    .header h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 40px;
+    }
+
+    header nav ul {
+        margin-top: 15px;
+        width: 100%;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .header nav ul li a {
+        font-size: 13px;
+    }
+
+    #about-me {
+        padding-top: 10px;
+        font-size: 30px;
+    }
+
+    p {
+        font-size: 15px;
+    }
     
+  
 }
 
 @media screen and (max-width:768px) {
