--- a/assests/CSS/style.css
+++ b/assests/CSS/style.css
@@ -11,7 +11,7 @@
 
 /* body background */
 body {
-    background-image: url(/assests/images/background.JPG);
+    background-image: url(../images/background.JPG);
     background-repeat: no-repeat;
     background-attachment: fixed;
     width: 100%;
@@ -95,32 +95,39 @@ p  {
 
 .run {
     border-style: dashed;
-    margin: 100px;
+    margin: 100px auto;
     box-sizing: border-box;
     padding: 40px 40px 40px ;
+    width: 300px;
+    
     
 }
 
 .runpic{
-    width: 15%;
-
+    width: 100%;
 }
 
 .columncontainer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    width:250px;
+    
 
-}
+} 
 
 .column1 {
-    width: 30%;
-    padding: 30px
+    width: 70%;
+    padding: 5px;
+    margin: 20px;
+
 }
 
 .column2 {
-    width: 30%;
-    padding: 30px;
+    width: 70%;
+    padding: 5px;
+    margin:20px;
+
 }
 
 .horiseon, .c1, .c2, .c3, .c4 {
@@ -133,13 +140,7 @@ p  {
 }
 
 .hs, .burger, .skates, .boo, .sweat {
-    width: 40%;
-}
-
-
-img:hover {
-    transform: scale(1.5);
-    z-index: 999;
+    width: 100%;
 }
 
 
